k8-chllg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mytest1
  labels:
    app: test1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test1
  template:
    metadata:
      labels:
        app: test1
    spec:
      containers:
      - name: test1
        image: my-app:v1
        ports:
        - containerPort: 4000
