k8-chllg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mytest1-service
spec:
  selector:
    app: test1
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
